@@ -162,6 +162,7 @@ export(theme_latex)
 export(theme_legend_position)
 export(theme_light)
 export(theme_linedraw)
+export(theme_matrix)
 export(theme_mesh)
 export(theme_minimal)
 export(theme_noarrows)
